edition = "2023";

package wayplatform.connect.tachograph.card.v1;

import "google/protobuf/timestamp.proto";

// Represents the content of the EF_VehicleUnits_Used file, which contains data
// about the vehicle units used by the card holder.
//
// The file structure is specified in Appendix 2, Section 4.2.2.
//
//     EF VehicleUnits_Used
//     └─CardVehicleUnitsUsed
//
// The data type `CardVehicleUnitsUsed` is specified in the Data Dictionary, Section 2.40.
//
// ASN.1 Specification:
//
//     CardVehicleUnitsUsed ::= SEQUENCE {
//         vehicleUnitPointerNewestRecord INTEGER(0..NoOfCardVehicleUnitRecords-1),
//         cardVehicleUnitRecords SET SIZE(NoOfCardVehicleUnitRecords) OF CardVehicleUnitRecord
//     }
message VehicleUnitsUsed {
  // Represents a record for a single vehicle unit that was used.
  //
  // The data type `CardVehicleUnitRecord` is specified in the Data Dictionary, Section 2.39.
  //
  // ASN.1 Specification:
  //
  //     CardVehicleUnitRecord ::= SEQUENCE {
  //         timeStamp TimeReal,
  //         manufacturerCode ManufacturerCode,
  //         deviceID OCTET STRING(SIZE(1)),
  //         vuSoftwareVersion VuSoftwareVersion
  //     }
  message Record {
    // ASN.1 Type: TimeReal (see DD 2.162)
    //
    //     TimeReal ::= INTEGER (0..2^32-1)
    google.protobuf.Timestamp timestamp = 1;

    // ASN.1 Type: ManufacturerCode (see DD 2.94)
    //
    //     ManufacturerCode ::= INTEGER(0..255)
    int32 manufacturer_code = 2;

    // ASN.1 Type: OCTET STRING(SIZE(1))
    int32 device_id = 3;

    // ASN.1 Type: VuSoftwareVersion (see DD 2.226)
    //
    //     VuSoftwareVersion ::= OCTET STRING (SIZE(4))
    bytes vu_software_version = 4;
  }

  // Index of the last updated vehicle unit record.
  int32 vehicle_unit_pointer_newest_record = 1;

  // The set of records for vehicle units used.
  repeated Record records = 2;

  // Digital signature for the EF_VehicleUnits_Used file content.
  bytes signature = 3;
}
